--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start:prod": "cross-env NODE_ENV=production node ./src/server.js",
     "start:dev": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docs": "docsify serve docs -p 3000",
-    "vercel-build": "echo 'Building for Vercel'"
+    "docs": "docsify serve docs -p 3000"
   },
   "author": "",
   "license": "ISC",
